# capsrvd

./: .gitignore  README.md  app.js  capsrvd  capsrvd-monit.conf  capsrvd.conf.json  capsrvd.conf.json.example  capsrvd.js  package.json
bootstrap/: index.js
centos/: CMakeLists.txt  index.js  postinst  postrm  prerm
conf/: monit  systemd
debian/: CMakeLists.txt  index.js  postinst  postrm  prerm
gentoo/: index.js
logrotate/: capsrvd.logrotate  captorsrv.logrotate
openrc/: capsrvd.openrc
rabbit/: connection.js  index.js
server/: connection.js  controller.js  index.js  packet.js
systemd/: capsrvd.service
sysv/: capsrvd
unit/: index.js
